<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/popularity_sort_button"
        android:orderInCategory="1"
        android:title="@string/popularity_menu_item" />

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/rating_sort_button"
        android:orderInCategory="2"
        android:title="@string/rating_menu_item" />

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/favorite_movies_menu_item"
        android:orderInCategory="3"
        android:title="@string/favorite_movies_menu_item" />

    <item
        app:showAsAction="never"
        android:id="@+id/settings_menu_button"
        android:orderInCategory="100"
        android:title="Settings" />

</menu>