<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.travistorres.moviescout.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/movie_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/page_not_found_error"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/page_not_found_error_message"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/api_key_unauthorized_error"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/invalid_api_key_error_message"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/network_connection_failed_error"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/network_failure_error_message"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="invisible" />

</LinearLayout>
